fix tex-align in author box

--- a/assets/style/graph.css
+++ b/assets/style/graph.css
@@ -127,7 +127,7 @@ h2 {
   font-weight: 400;
   font-size: 1rem;
   color: var(--font-color-gray);
-  text-align: center;
+  text-align: left;
   line-height: 120%;
 }
 
